--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,7 @@
 
     <title>
         {% if page.title == "Home" %}
-            {{ site.title }} | {{ site.description }}
+            {{ site.title }}
         {% else %}
             {{ page.title }} | {{ site.title }}
       {% endif %}
