--- a/assets/css/bootstrap_css.css
+++ b/assets/css/bootstrap_css.css
@@ -31,7 +31,7 @@
 }
 
 .col-sm-1-pad {
-  padding-right: 10px;
+  padding-right: 15px;
   flex: 0 0 auto;
   width: 8.3333333333%;
 }
@@ -41,7 +41,19 @@
   width: 16.6666666667%;
 }
 
+.col-sm-2-pad {
+  padding-right: 15px;
+  flex: 0 0 auto;
+  width: 16.6666666667%;
+}
+
 .col-sm-3 {
+  flex: 0 0 auto;
+  width: 25%;
+}
+
+.col-sm-3-pad {
+  padding-right: 15px;
   flex: 0 0 auto;
   width: 25%;
 }
@@ -51,7 +63,19 @@
   width: 33.3333333333%;
 }
 
+.col-sm-4-pad {
+  padding-right: 15px;
+  flex: 0 0 auto;
+  width: 33.3333333333%;
+}
+
 .col-sm-5 {
+  flex: 0 0 auto;
+  width: 41.6666666667%;
+}
+
+.col-sm-5-pad {
+  padding-right: 15px;
   flex: 0 0 auto;
   width: 41.6666666667%;
 }
@@ -89,4 +113,16 @@
 .col-sm-12 {
   flex: 0 0 auto;
   width: 100%;
+}
+
+.experience h2 { border-bottom: 1px solid #ccc;}
+
+.text-center {
+  padding-left: 85px;
+  margin-top: 10%;
+}
+
+.center-pad{
+  padding-right: 15px;
+  padding-left: 15px;
 }
