about page update

--- a/assets/css/bootstrap_css.css
+++ b/assets/css/bootstrap_css.css
@@ -118,7 +118,7 @@
 .experience h2 { border-bottom: 1px solid #ccc;}
 
 .text-center {
-  padding-left: 85px;
+  padding-left: 10%;
   margin-top: 10%;
 }
 
