--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,7 +39,12 @@
 {%- include footer.html -%}
 
 {% if site.data.settings.mathjax.active %}
-  <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+  </script>
+  <script type="text/javascript" async
+    src="https://cdn.jsdelivr.net/npm/mathjax@2.7.8/unpacked/MathJax.js?config=TeX-MML-AM_CHTML">
+  </script>
 {% endif %}
 </body>
 </html>
