--- a/_sass/typography.scss
+++ b/_sass/typography.scss
@@ -29,10 +29,10 @@ h5{
 }
 
 p{
-    font-size: 1.15rem;
+    font-size: 1.1rem;
 }
 
 //System stack for everything
 body {
-    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue",sans-serif;
-  }
+    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,"Helvetica Neue","Hiragino Sans GB", "Microsoft YaHei", "WenQuanYi Micro Hei", sans-serif;
+}
