--- a/assets/css/bootstrap_css.css
+++ b/assets/css/bootstrap_css.css
@@ -1,10 +1,3 @@
-/*!
- * Bootstrap Grid v5.0.1 (https://getbootstrap.com/)
- * Copyright 2011-2021 The Bootstrap Authors
- * Copyright 2011-2021 Twitter, Inc.
- * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
- */
-
 .img-fluid {
   max-width: 100%;
   height: auto;
@@ -119,7 +112,7 @@
 
 .text-center {
   padding-left: 10%;
-  margin-top: 10%;
+  padding-top: 10%;
 }
 
 .center-pad{
