--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -38,13 +38,13 @@
 
 {%- include footer.html -%}
 
-{% if site.data.settings.mathjax.active %}
+<!-- {% if site.data.settings.mathjax.active %}
   <script type="text/x-mathjax-config">
     MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
   </script>
   <script type="text/javascript" async
     src="https://cdn.jsdelivr.net/npm/mathjax@2.7.8/unpacked/MathJax.js?config=TeX-MML-AM_CHTML">
   </script>
-{% endif %}
+{% endif %} -->
 </body>
 </html>
