--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -43,10 +43,19 @@ title: Home
 <div class = "paginator">
     {% if paginator.total_pages > 1 %}
         {% if paginator.previous_page %}
-            <a class = "newer paginate-button" href="{{ paginator.previous_page_path | relative_url }}"><< Newer Posts</a>
+            <a class = "newer paginate-button" href="{{ paginator.previous_page_path | relative_url }}"><<</a>
         {% endif %}
+        {% for page in (1..paginator.total_pages) %}
+            {% if page == paginator.page %}
+                <span class="active paginate-button">{{ page }}</span>
+            {% elsif page == 1 %}
+                <a class="paginate-button" href="{{ '/index.html' | prepend: site.baseurl | replace: '//', '/' }}">{{ page }}</a>
+            {% else %}
+                <a class="paginate-button" href="{{ site.paginate_path | prepend: site.baseurl | replace: '//', '/' | replace: ':num', page }}">{{ page }}</a>
+            {% endif %}
+        {% endfor %}
         {% if paginator.next_page %}
-            <a class = "older paginate-button" href="{{ paginator.next_page_path | relative_url }}">Older Posts >></a>
+            <a class = "older paginate-button" href="{{ paginator.next_page_path | relative_url }}">>></a>
         {% endif %}
     {% endif %}
 </div>
