--- a/_sass/paginator.scss
+++ b/_sass/paginator.scss
@@ -26,9 +26,10 @@
     .paginate-button{
         border: 1px solid #e0e0e0;
         border-radius: 3px;
-        padding: 15px 35px;
+        padding: 10px 35px;
         display: inline-block;
         font-size: 16px;
+        font-weight: bold;
     }
     .paginate-button:hover{
         background-color: $light-grey;
