gallery masonry css

--- a/assets/css/bootstrap_css.css
+++ b/assets/css/bootstrap_css.css
@@ -119,3 +119,48 @@
   padding-right: 15px;
   padding-left: 15px;
 }
+
+.masonry {
+  /* width: 1440px; */
+  width: 100%;
+  margin: 20px auto;
+  columns: 3;
+  column-gap: 20px;
+}
+
+.item {
+  width: 100%;
+  break-inside: avoid;
+  margin-bottom: 20px;
+}
+
+.item img {
+  width: 100%;
+}
+
+/* .item h2 {
+  padding: 8px 0;
+} */
+
+@media screen and (min-width: 1024px) and (max-width: 1439.98px) {
+  .masonry {
+    width: 96vw;
+    columns: 3;
+    column-gap: 20px;
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1023.98px) {
+  .masonry {
+    width: 96vw;
+    columns: 2;
+    column-gap: 20px;
+  }
+}
+
+@media screen and (max-width: 767.98px) {
+  .masonry {
+    width: 96vw;
+    columns: 1;
+  }
+}
