--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -101,3 +101,24 @@ header{
             }
         }
 }
+
+.jump-title{
+    display: block;
+    float: left;
+    a{
+      -o-transition: .5s;
+      -ms-transition: .5s;
+      -moz-transition: .5s;
+      -webkit-transition: .5s;
+      transition: .5s;
+    }
+    a{
+        color: $base;
+        text-decoration: none;
+        margin-right: 8px;
+        font-size: 1.05rem;
+    }
+    a:hover{
+        color: black;
+    }
+}
